# qap

./: .gitignore  README.md  job.sh  send.sh
experments/: cp_sum.py  quadratic.py
instance/: generate.py  generate_many.py  generate_r.py  tai16c_4x4_20  tai16c_4x4_30  tai16c_4x4_40  tai16c_4x4_50  tai16c_4x4_60  tai16c_4x4_70  tai16c_4x4_80  tai256c  tai25c_5x5_20  tai25c_5x5_30.txt  tai25c_5x5_40.txt  tai25c_5x5_50  tai25c_5x5_60  tai25c_5x5_70  tai25c_5x5_80  tai32c_4x8_20  tai32c_4x8_30  tai32c_4x8_40  tai32c_4x8_50  tai32c_4x8_60  tai32c_4x8_70  tai32c_4x8_80  tai35c_rand_40.txt  tai36c_6x6_20.txt  tai36c_6x6_25.txt  tai36c_6x6_30.txt  tai36c_6x6_40  tai36c_6x6_50  tai36c_6x6_60  tai36c_6x6_70  tai36c_6x6_80  tai40c_5x8_20  tai40c_5x8_30  tai40c_5x8_40  tai40c_5x8_50  tai40c_5x8_60  tai40c_5x8_70  (+37 more)
plot/: heatmap.py  live.py  s25_1  s25_2  s25_3  s25_4  s36_1  tai16c_4_4_30.txt  tai25c_5_5_40.txt  tai36c_6_6_40.txt
plot/delta/: l36  l49  l49_50  l49_60  l64  l64_40  m36  m49_50  m49_60  m64  m64_40
solution/: chain.sh  extract.py  process.py  stats.py  sync.sh
src/: CMakeLists.txt  cb.cc  custom.cc  nocb.cc  toff.cc
src/cmake/: FindCPLEX.cmake
src/experiments/: a_star.cc  cb2.cc  cb2_all.cc  cb2_allfixed.cc  cb2_bestpair.cc  cb2_fixedpairs.cc  cp_min.py  cplex_q.cc  custom.cc  custom_branching.cc  mixed.cc  nocb.cc
src/include/: inputs.hh  live.hh  params.hh
src/lib/: inputs.cc  live.cc  params.cc
src/test/: kp.cc
